major upgrade
This version replaces the request sender so it can support the latest Java version
A few bugs have been fixed
The logic has been enhanced to support the latest IIS (IIS 10 at the time of this update)